--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -212,7 +212,7 @@
 							<div class="img-container">
 								<img *ngIf="!controls.panImage.value" class=""
 									src="../../../../../../assets/media/icons/image-placeholder.png" alt="" />
-								<img class="fetched-image" *ngIf="controls.panImage.value" [src]="controls.panImage"
+								<img class="fetched-image" *ngIf="controls.panImage.value" [src]="controls.panImage.value"
 									style="border-radius: 15px;" alt="" />
 								<img src="../../../../../assets/media/icons/edit.svg" alt=""
 									class="kt-pointer remove-icon" (click)="form60.click()"
