changes in payment

--- a/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
@@ -99,7 +99,8 @@
                     <div class="d-block">
                         <div>Invoice Price</div>
                         <div>
-                            <h4>{{orderData.orderdetails[0].finalOrderPrice}}</h4>
+                            <h4 class="currency">{{orderData.orderdetails[0].finalOrderPrice | indianCurrencyFormat}}
+                            </h4>
                         </div>
                     </div>
                 </div>
