--- a/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
+++ b/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
@@ -1,6 +1,6 @@
 <div *ngIf="type != 'view'" class="position-relative">
   <img src="../../../../../assets/media/icons/cancel.svg" class="cancel" alt="" (click)="close()">
-  <div class="row kt-padding-l-40 kt-padding-r-40">
+  <div class="row" [class.kt-padding-l-40,.kt-padding-r-40]="data.modal">
     <div class="col-12">
       <ngb-carousel *ngIf="images.length" [showNavigationArrows]="images?.length > 1">
         <ng-template ngbSlide *ngFor="let img of images">
