table and payment emi

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -7,7 +7,7 @@
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
                 <a ngbDropdownItem (click)="viewLoan()">View </a>
-                <a ngbDropdownItem (click)="$event.preventDefault()">Pay Interest EMI</a>
+                <a ngbDropdownItem (click)="interestEmi()">Pay Interest EMI</a>
                 <a ngbDropdownItem (click)="topUp()">Top Up</a>
                 <a ngbDropdownItem (click)="partPayment()">Part Payment</a>
                 <a ngbDropdownItem (click)="$event.preventDefault()">Part Release</a>
