--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/pay-interset-emi/pay-interset-emi.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/pay-interset-emi/pay-interset-emi.component.html
@@ -26,16 +26,22 @@
         <h5 class="kt-padding-t-20 kt-padding-b-20">Payment Interest EMI</h5>
 
         <div class="table-div">
-            <table class="table">
+            <table class="table outer-border">
                 <thead>
                     <th class="transparent"></th>
-                    <th class="transparent">rav</th>
-                    <th class="transparent">ghjk</th>
-                    <th class="transparent">khk</th>
-                    <th class="transparent">jlhgy</th>
+                    <th class="transparent">Last Interest Payment</th>
+                    <th class="transparent">Last Interest Payment Date</th>
+                    <th class="transparent">EMI Due Date</th>
+                    <th class="transparent">PAID Amount</th>
+                    <th class="transparent">Interest EMI Payment Date</th>
+                    <th class="transparent">Penal Interest</th>
+                    <th class="transparent">Pending Amount</th>
                 </thead>
                 <tbody>
                     <tr>
+                        <td>dfhdfgh</td>
+                        <td>dgfsddf</td>
+                        <td>sdfsdf</td>
                         <td>dfhdfgh</td>
                         <td>dgfsddf</td>
                         <td>sdfsdf</td>
