--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/product/show-product/product-list/product-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/product/show-product/product-list/product-list.component.html
@@ -56,7 +56,9 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="sku">
-                    <mat-header-cell *matHeaderCellDef>SKU Code</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>SKU Code &nbsp;<img class="kt-pointer" [src]="sortImg"
+                            width="14px" alt="sort" (click)="sortSku()">
+                    </mat-header-cell>
                     <mat-cell *matCellDef="let element">{{element?.sku}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="productName">
