--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -67,7 +67,7 @@
     <kt-button *ngIf="value1" [value]='value1' [type]='type1' (click)="action($event)" (action)="buttonValue($event)"
         class="kt-margin-r-10 kt-margin-l-10">
     </kt-button>
-    <kt-button *ngIf="button" [value]='value5' [type]='type5' (click)="action($event)" (action)="buttonValue($event)"
+    <kt-button [value]='value5' [type]='type5' (click)="action($event)" (action)="buttonValue($event)"
         class="kt-margin-r-10 kt-margin-l-10">
     </kt-button>
 </ng-template>
