Changes in dasboard

--- a/gold-admin-frontend/src/app/views/pages/broker/dashboard/dashboard.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/broker/dashboard/dashboard.component.scss
@@ -1,7 +1,5 @@
 :host {
-	::ng-deep {
-		ngb-tabset > .nav-tabs {
-			display: none;
-		}
-	}
+    .kt-portlet__body {
+        padding: 20px !important;
+    }
 }
