bhushan::topup UI

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -1,9 +1,11 @@
 <kt-portlet>
 
     <kt-portlet-body>
-        <button class="btn-transparent" ngbDropdown>
+
+        <button mat-icon-button class="btn-transparent" ngbDropdown>
             <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown2" role="button">
                 <img src="../../../../../../assets/media/icons/options.svg" alt="">
+                <!-- <mat-icon>more_vert</mat-icon> -->
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
                 <a ngbDropdownItem (click)="viewLoan()">View </a>
