--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
@@ -34,4 +34,10 @@
         flex: 0 0 10% !important;
     }
     
+    .dropdown-menu > li > a, .dropdown-menu > .dropdown-item {
+        padding: 0 10px !important;
+    }
+    .nav-link {
+        padding: 0 !important;
+    }
 }
